--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
       </main>
       <footer class="footer">&copy;2022, Desinged by aFriend</footer>
     </div>
-    <script src="/scripts/index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
