--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub Collection</title>
     <link rel="icon" type="image/x-icon" href="favicon.svg" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -55,6 +55,6 @@
       </main>
       <footer class="footer">&copy;2022, Desinged by aFriend</footer>
     </div>
-    <script src="/scripts/index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
